--- a/package.json
+++ b/package.json
@@ -1,46 +1,69 @@
 {
-  "name": "react_hardhat_template",
-  "version": "1.0.0",
-  "description": "",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "author": "gregory@dappuniversity.com",
-  "license": "ISC",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.1"
-  }
+	"name": "dapp_punks",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.1.1",
+		"@testing-library/user-event": "^13.5.0",
+		"bootstrap": "^5.3.3",
+		"dotenv": "^16.0.0",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
+		"react": "^18.0.0",
+		"react-bootstrap": "^2.10.2",
+		"react-apexcharts": "^1.3.9",
+		"react-blockies": "^1.4.1",
+		"react-dom": "^18.0.0",
+		"react-redux": "^7.2.6",
+		"react-scripts": "5.0.1",
+		"redux": "^4.1.2",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.1",
+		"reselect": "^4.1.5",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+		"@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+		"@nomicfoundation/hardhat-toolbox": "2.0.2",
+		"@nomiclabs/hardhat-ethers": "2.2.3",
+		"@nomiclabs/hardhat-etherscan": "^3.1.8",
+		"@typechain/ethers-v5": "^10.2.1",
+		"@typechain/hardhat": "^6.1.6",
+		"@types/chai": "^4.3.14",
+		"@types/mocha": "^10.0.6",
+		"chai": "4.3.6",
+		"ethers": "5.7.2",
+		"hardhat": "2.19.4",
+		"hardhat-gas-reporter": "^1.0.10",
+		"solidity-coverage": "^0.8.11",
+		"ts-node": "^10.9.2",
+		"typechain": "^8.3.2",
+		"typescript": "^5.4.3"
+	}
 }
