--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"react": "^18.0.0",
-		"react-bootstrap": "^2.10.2",
 		"react-apexcharts": "^1.3.9",
 		"react-blockies": "^1.4.1",
+		"react-bootstrap": "^2.10.2",
+		"react-countdown": "^2.3.5",
 		"react-dom": "^18.0.0",
 		"react-redux": "^7.2.6",
 		"react-scripts": "5.0.1",
